--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /index.html
   - title: "Category"
     url: /categories/
-  - title: "Project"
+  - title: "Projects"
     url: /projects/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
