--- a/_config.yml
+++ b/_config.yml
@@ -198,10 +198,18 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
-  highlighter: rouge
+  syntax_highlighter: rouge
   syntax_highlighter_opts:
-      block:
-          line_numbers: true
+    default_lang: csharp
+    css_class: 'highlight'
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+  # highlighter: rouge
+  # syntax_highlighter_opts:
+  #     block:
+  #         line_numbers: true
 
 
 # Sass/SCSS
