--- a/_config.yml
+++ b/_config.yml
@@ -200,7 +200,7 @@ kramdown:
   enable_coderay: false
   syntax_highlighter: rouge
   syntax_highlighter_opts:
-    default_lang: csharp
+    default_lang: cpp
     css_class: 'highlight'
     span:
       line_numbers: false
