--- a/_config.yml
+++ b/_config.yml
@@ -198,18 +198,10 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
-  syntax_highlighter: rouge
+  highlighter: rouge
   syntax_highlighter_opts:
-    default_lang: cpp
-    css_class: 'highlight'
-    span:
-      line_numbers: false
-    block:
-      line_numbers: true
-  # highlighter: rouge
-  # syntax_highlighter_opts:
-  #     block:
-  #         line_numbers: true
+      block:
+          line_numbers: true
 
 
 # Sass/SCSS
