--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "ASUD"
 description              : "ASUD's Programming learned."
-url                      : "ProSleeper.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "http://ProSleeper.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "ProSleeper/ProSleeper.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/back.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
