--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   avatar           : "/assets/images/headShot.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "A Person."
   location         : "South Korea, Seoul"
-  email            :
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -117,7 +117,10 @@ author:
       url: "https://github.com/ProSleeper"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://instagram.com/"
+    - label: "Wordle"
+      icon: "fab fa-fw fa-instagram"
+      url: "/projectwordle"
 
 # Site Footer
 footer:
