--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
     - label: "Wordle"
-      icon: "fa-solid fa-gamepad-modern"
+      icon: "fa-solid fa-gamepad"
       url: "/projectwordle"
 
 # Site Footer
