--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
       url: "/projectwordle"
     - label: "project"
       icon: "fa-solid fa-gamepad"
-      url: "/project_how_about_today/"
+      url: "/project_HowAboutToday/"
 
 # Site Footer
 footer:
